--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="./recipes/pizza.html">pizza</a></li>
+      <li><a href="./recipes/cookies.html">cookies</a></li>
     </ul>
   </body>
 </html>
