--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="./recipes/pizza.html">pizza</a></li>
       <li><a href="./recipes/cookies.html">cookies</a></li>
+      <li><a href="./recipes/sandwich.html">sandwich</a></li>
     </ul>
   </body>
 </html>
