Add image and description to pizza page

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1>Chicken Garlic Pizza</h1>
+    <img src="https://images.media-allrecipes.com/userphotos/4272.jpg" alt="Chicken Garlic Pizza" />
+    <h2>Description</h2>
+    <p>A delicious option for homemade pizza! Butter garlic sauce, chicken, tomato, and ricotta and Parmesan cheeses are baked together for a delightfully light pizza.</p>
     <a href="../index.html">back</a>
   </body>
 </html>
