Add ingredient list to pizza page

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,6 +9,19 @@
     <img src="https://images.media-allrecipes.com/userphotos/4272.jpg" alt="Chicken Garlic Pizza" />
     <h2>Description</h2>
     <p>A delicious option for homemade pizza! Butter garlic sauce, chicken, tomato, and ricotta and Parmesan cheeses are baked together for a delightfully light pizza.</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 skinless, boneless chicken breast half</li>
+      <li>2 tablespoons butter or margarine, softened</li>
+      <li>2 cloves garlic, minced</li>
+      <li>2 tablespoons chopped green onion</li>
+      <li>½ teaspoon dried basil</li>
+      <li>1 (10 ounce) can refrigerated pizza crust dough</li>
+      <li>2 roma (plum) tomatoes, diced</li>
+      <li>½ cup chopped fresh cilantro</li>
+      <li>½ cup ricotta cheese </li>
+      <li>¼ cup grated Parmesan cheese</li>
+    </ul>
     <a href="../index.html">back</a>
   </body>
 </html>
