--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1>Raspberry Oatmeal Cookie Bars</h1>
+    <img src="https://images.media-allrecipes.com/userphotos/9341789.jpg" alt="Raspberry Oatmeal Cookie Bars" />
+    <h2>Description</h2>
+    <p>This oatmeal cookie is one of my favorite cookie bar recipes.</p>
     <a href="../index.html">back</a>
   </body>
 </html>
