--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -9,6 +9,16 @@
     <img src="https://images.media-allrecipes.com/userphotos/9341789.jpg" alt="Raspberry Oatmeal Cookie Bars" />
     <h2>Description</h2>
     <p>This oatmeal cookie is one of my favorite cookie bar recipes.</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 cup all-purpose flour</li>
+      <li>1 cup rolled oats</li>
+      <li>½ cup packed light brown sugar</li>
+      <li>¼ teaspoon baking soda</li>
+      <li>⅛ teaspoon salt</li>
+      <li>½ cup butter, softened</li>
+      <li>¾ cup seedless raspberry jam</li>
+    </ul>
     <a href="../index.html">back</a>
   </body>
 </html>
