Add cooking instructions to cookies page

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -19,6 +19,13 @@
       <li>½ cup butter, softened</li>
       <li>¾ cup seedless raspberry jam</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Preheat the oven to 350 degrees F (175 degrees C). Grease an 8x8-inch square pan; line with greased foil.</li>
+      <li>Combine flour, oats, brown sugar, baking soda, and salt in a large bowl. Rub in butter using your hands or a pastry blender to form a crumbly mixture.</li>
+      <li>Press 2 cups oat mixture into the bottom of the prepared pan. Spread jam to within 1/4 inch of the edge. Sprinkle remaining crumb mixture on top; press down lightly into jam.</li>
+      <li>Bake in the preheated oven until lightly browned, 35 to 40 minutes. Allow to cool before cutting into bars.</li>
+    </ol>
     <a href="../index.html">back</a>
   </body>
 </html>
