--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1>Lorraine's Club Sandwich</h1>
+    <img src="https://images.media-allrecipes.com/userphotos/1004601.jpg" alt="Lorraine's Club Sandwich" />
+    <h2>Description</h2>
+    <p>An easy, quick, and delicious sandwich to eat anytime.</p>
     <a href="../index.html">back</a>
   </body>
 </html>
