Add ingredient list to sandwich page

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -9,6 +9,15 @@
     <img src="https://images.media-allrecipes.com/userphotos/1004601.jpg" alt="Lorraine's Club Sandwich" />
     <h2>Description</h2>
     <p>An easy, quick, and delicious sandwich to eat anytime.</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2 slices bacon</li>
+      <li>3 slices bread, toasted</li>
+      <li>3 tablespoons mayonnaise</li>
+      <li>2 leaves lettuce</li>
+      <li>2 (1 ounce) slices cooked deli turkey breast</li>
+      <li>2 slices tomato</li>
+    </ul>
     <a href="../index.html">back</a>
   </body>
 </html>
