--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -18,6 +18,11 @@
       <li>2 (1 ounce) slices cooked deli turkey breast</li>
       <li>2 slices tomato</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Place bacon in a heavy skillet. Cook over medium high heat until evenly brown. Drain on paper towels.</li>
+      <li>Spread each slice of bread with mayonnaise. On one slice of toast, place the turkey and lettuce. Cover with a slice of toast, then the bacon and tomato. Top with last slice of toast.</li>
+    </ol>
     <a href="../index.html">back</a>
   </body>
 </html>
