--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="./recipes/pizza.html">pizza</a></li>
-      <li><a href="./recipes/cookies.html">cookies</a></li>
-      <li><a href="./recipes/sandwich.html">sandwich</a></li>
+      <li><a href="./recipes/pizza.html">Chicken Garlic Pizza</a></li>
+      <li><a href="./recipes/cookies.html">Raspberry Oatmeal Cookie Bars</a></li>
+      <li><a href="./recipes/sandwich.html">Lorraine's Club Sandwich</a></li>
     </ul>
   </body>
 </html>
